--- a/src/CashFlow.Domain/CashFlow.Domain.csproj
+++ b/src/CashFlow.Domain/CashFlow.Domain.csproj
@@ -7,6 +7,11 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="8.0.12" />
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="9.0.1" />
+  </ItemGroup>
+
+  <ItemGroup>
     <Compile Update="Reports\ResourceReportGenerationMessages.pt-BR.Designer.cs">
       <DependentUpon>ResourceReportGenerationMessages.pt-BR.resx</DependentUpon>
       <DesignTime>True</DesignTime>
